feat: fix service owner edge
